--- a/data/style.css
+++ b/data/style.css
@@ -17,7 +17,7 @@
     border-radius: 50%;
     background: #C4C4C4;
     }
-    #arrow {
+    .arrow {
         width: 20px;
         height: 20px;
         border: 4px solid #32557f;
