--- a/data/firstPage.css
+++ b/data/firstPage.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
 * {
@@ -10,8 +11,8 @@ body {
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
-	/* height: 100vh;
-	margin: -20px 0 50px; */
+	height: 50vh;
+	margin: -20px 0 50px;
 }
 
 h1 {
@@ -69,17 +70,14 @@ button.ghost {
 }
 
 form {
-	margin-top: 20px;
-	background-color: #ffffff;
+	background-color: #FFFFFF;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	padding: 20px 50px;
+	padding: 0 50px;
 	height: 100%;
 	text-align: center;
-	border: 2px solid #000000;
-	border-radius: 20%;
 }
 
 input {
